--- a/gulp/css/libs/values.scss
+++ b/gulp/css/libs/values.scss
@@ -1,5 +1,6 @@
 $firstColor: #5a8d3e !global;
-$secondColor: #e7ab29 !global;
+$secondColor: #c4942e !global;
+$newColor: #f0f0f0 !global;
 
 $asidePosition: 80px !global;
 $asidePositionTablet: 65px !global;
